[gd_scene load_steps=4 format=3 uid="uid://bc51vlho4haq5"]

[ext_resource type="Script" uid="uid://degd2ywkoywf1" path="res://grave.gd" id="1_kdo1t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3ecyj"]
radius = 17.029387

[sub_resource type="LabelSettings" id="LabelSettings_kdo1t"]
font_size = 10
font_color = Color(0, 0, 0, 1)

[node name="Grave" type="Area2D"]
script = ExtResource("1_kdo1t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_3ecyj")

[node name="Label" type="Label" parent="."]
offset_left = -160.0
offset_top = -40.0
offset_right = 160.0
label_settings = SubResource("LabelSettings_kdo1t")
horizontal_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
